--- a/app/rutas/referenciales/ciudad/templates/ciudad-index.html
+++ b/app/rutas/referenciales/ciudad/templates/ciudad-index.html
@@ -11,7 +11,7 @@ Ciudades
     <!-- tarjeta -->
     <div class="card">
       <div class="card-header">
-        <button type="button" class="btn btn-primary" id="btnAgregar">Agregar</button>
+        <button type="button" class="btn btn-outline-success" id="btnAgregar">Agregar</button>
       </div>
       <div class="card-body">
         <table class="table table-striped" id="tbl">
@@ -50,8 +50,8 @@ Ciudades
 
           <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-outline-success" id="btnGuardar">Guardar</button>
+            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
           </div>
 
         </div>
