--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,6 +71,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
+                        <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
                     </div>
                 </div>
             </li>
@@ -329,7 +330,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Manurxk 2024</span>
+                        <span>Copyright &copy; manurxk</span>
                     </div>
                 </div>
             </footer>
