--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,6 +70,7 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="{{ url_for('correo.correoIndex') }}">Correo</a>
                         <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
                         <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
                     </div>
