--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,8 @@
                         <a class="collapse-item" href="{{ url_for('correo.correoIndex') }}">Correo</a>
                         <a class="collapse-item" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
                         <a class="collapse-item" href="{{ url_for('pais.paisIndex') }}">Pais</a>
+                        <a class="collapse-item" href="{{ url_for('telefono.telefonoIndex') }}">Teléfono</a>
+                        <a class="collapse-item" href="{{ url_for('correo.correoIndex') }}">Dirección</a>
                     </div>
                 </div>
             </li>
