--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,6 +80,8 @@
                         <a class="collapse-item" href="{{ url_for('telefono.telefonoIndex') }}">Teléfono</a>
                         <a class="collapse-item" href="{{ url_for('direccion.direccionIndex') }}">Dirección</a>
                         <a class="collapse-item" href="{{ url_for('persona.personaIndex') }}">Persona</a>
+                        <a class="collapse-item" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
+                        <a class="collapse-item" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupación</a> 
                     </div>
                 </div>
             </li>
