--- a/app/rutas/referenciales/index/templates/index-index.html
+++ b/app/rutas/referenciales/index/templates/index-index.html
@@ -18,63 +18,57 @@ Correos
       </div>
     </div><br>
 
-
-
-
-
-
-
-
-
-
-
-        <style>
-            /* Contenedor para los botones */
-            .button-container {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                margin: 20px;
-            }
+    <style>
+        /* Contenedor para los botones */
+        .button-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin: 20px;
+        }
     
-            /* Estilo base para los botones */
+        /* Estilo base para los botones con un color azul oscuro */
+        .large-button {
+            flex: 1 0 30%;
+            max-width: 30%;
+            margin: 10px;
+            padding: 20px;
+            background-color: transparent; /* Fondo transparente para el outline */
+            color: #004085; /* Color del texto azul oscuro */
+            border: 2px solid #004085; /* Borde azul oscuro */
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+            border-radius: 5px; /* Borde redondeado */
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2); /* Sombra */
+        }
+    
+        /* Efecto hover para los botones */
+        .large-button:hover {
+            background-color: #004085; /* Fondo azul oscuro en hover */
+            color: white; /* Texto en blanco cuando se hace hover */
+            box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.4); /* Sombra más intensa en hover */
+        }
+    
+        /* Responsivo */
+        @media (max-width: 768px) {
             .large-button {
-                flex: 1 0 30%;
-                max-width: 30%;
-                margin: 10px;
-                padding: 20px;
-                background-color: #17a2b8; /* Color info de Bootstrap */
-                color: white;
-                border: none;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 18px;
-                cursor: pointer;
-                transition: background-color 0.3s;
-                border-radius: 5px; /* Borde redondeado */
+                flex: 1 0 45%;
+                max-width: 45%;
             }
+        }
     
-            /* Efecto hover para los botones */
-            .large-button:hover {
-                background-color: #138496; /* Color oscuro del botón info */
+        @media (max-width: 480px) {
+            .large-button {
+                flex: 1 0 100%;
+                max-width: 100%;
             }
+        }
+    </style>
     
-            /* Responsivo */
-            @media (max-width: 768px) {
-                .large-button {
-                    flex: 1 0 45%;
-                    max-width: 45%;
-                }
-            }
-    
-            @media (max-width: 480px) {
-                .large-button {
-                    flex: 1 0 100%;
-                    max-width: 100%;
-                }
-            }
-        </style>
     </head>
     <body>
         <div class="button-container">
@@ -86,8 +80,8 @@ Correos
             <a class="large-button" href="{{ url_for('persona.personaIndex') }}">Persona</a>
             <a class="large-button" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupacion</a>
             <a class="large-button" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
-            <a class="large-button" href="#">Botón 9</a>
-            <a class="large-button" href="#">Botón 10</a>
+            <a class="large-button" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
+            <a class="large-button" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
             <a class="large-button" href="#">Botón 11</a>
             <a class="large-button" href="#">Botón 12</a>
             <a class="large-button" href="#">Botón 13</a>
