Feat:Limpieza de la rama

--- a/app/rutas/referenciales/index/templates/no_encontrado.html
+++ b/app/rutas/referenciales/index/templates/no_encontrado.html
@@ -119,8 +119,8 @@ Correos
 <body>
     <div class="welcome-banner">
         <div class="welcome-text">
-            <h1>Bienvenido</h1>
-            <p>Que hacemos hoy</p>
+            <h1>Pagina No encotrada</h1>
+            <p></p>
             
         </div>
         <div class="welcome-image">
@@ -136,59 +136,6 @@ Correos
 
     
    
-    <body>
-        <div class="button-container">
-            <a class="large-button" href="#">C</a>
-            <a class="large-button" href="{{ url_for('ciudad.ciudadIndex') }}">Ciudad</a>
-            <a class="large-button" href="{{ url_for('pais.paisIndex') }}">País</a>
-            <a class="large-button" href="#"></a>
-            <a class="large-button" href="#"></a>
-            <a class="large-button" href="{{ url_for('persona.personaIndex') }}">Persona</a>
-            <a class="large-button" href="{{ url_for('ocupacion.ocupacionIndex') }}">Ocupacion</a>
-            <a class="large-button" href="{{ url_for('nacionalidad.nacionalidadIndex') }}">Nacionalidad</a>
-            <a class="large-button" href="{{ url_for('estadocivil.estadocivilIndex') }}">Estado Civil</a>
-            <a class="large-button" href="{{ url_for('sexo.sexoIndex') }}">Sexo</a>
-            <a class="large-button" href="#">Botón 11</a>
-            <a class="large-button" href="#">Botón 12</a>
-            <a class="large-button" href="#">Botón 13</a>
-            <a class="large-button" href="#">Botón 14</a>
-            <a class="large-button" href="#">Botón 15</a>
-        </div>
-
-    
-
-
-
-    <br>
-    <div class="container mt-4">
-        <div class="card-body">
-          </div>
-          <div class="login-container">
-              <h2>Inicio de Sesión</h2>
-              <form action="/action_page.php">
-                  <div class="form-group">
-                      <label for="username">Usuario:</label>
-                      <input type="text" id="username" name="username" placeholder="Ingrese su usuario" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="pwd">Contraseña:</label>
-                      <input type="password" id="pwd" name="pwd" placeholder="Ingrese su contraseña" required>
-                  </div>
-                  <div class="remember-me form-group form-check">
-                      <input type="checkbox" id="remember-me">
-                      <label for="remember-me">Recuérdame</label>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                  <div class="forgot-password">
-                      <a href="#">¿Olvidaste tu contraseña?</a>
-                  </div>
-                  <div class="modal-header">
-                      <h4 class="modal-title" id="modalTitle"></h4>
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-              </form>
-          </div>
-  </div><br>
   
   
  
