--- a/app/rutas/referenciales/index/templates/index-index.html
+++ b/app/rutas/referenciales/index/templates/index-index.html
@@ -18,7 +18,7 @@ Inicio
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #6c63ff;
+            background-color: #2bbe7c;
             color: white;
             padding: 20px;
             border-radius: 15px;
@@ -41,7 +41,7 @@ Inicio
         }
 
         button {
-            background-color: #4caf50;
+            background-color: #0f9976;
             border: none;
             color: white;
             padding: 10px 20px;
@@ -53,7 +53,7 @@ Inicio
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #0f9976;
         }
 
         .welcome-image {
@@ -81,8 +81,8 @@ Inicio
             margin: 10px;
             padding: 50px;
             background-color: transparent; /* Fondo transparente para el outline */
-            color: #004085; /* Color del texto azul oscuro */
-            border: 2px solid #004085; /* Borde azul oscuro */
+            color: #0f0f0f; /* Color del texto azul oscuro */
+            border: 2px solid #2bbe7c; /* Borde azul oscuro */
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -95,7 +95,7 @@ Inicio
     
         /* Efecto hover para los botones */
         .large-button:hover {
-            background-color: #004085; /* Fondo azul oscuro en hover */
+            background-color: #2bbe7c; /* Fondo azul oscuro en hover */
             color: white; /* Texto en blanco cuando se hace hover */
             box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.4); /* Sombra más intensa en hover */
         }
