--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('index.indexIndex') }}">
@@ -108,7 +108,7 @@
                         <a class="collapse-item" href="{{ url_for('especialidad.especialidadIndex') }}">Especialidad</a>   
                         <a class="collapse-item" href="{{ url_for('dia.diaIndex') }}">Dia</a> 
                         <a class="collapse-item" href="#">11-turno</a> 
-                        <a class="collapse-item" href="#">12-duracion de consulta</a> 
+                        <a class="collapse-item" href="{{ url_for('duracionconsulta.duracionconsultaIndex') }}">12-duracion de consulta</a> 
                         <a class="collapse-item" href="#">13-</a> 
                         <a class="collapse-item" href="#">14-</a> 
                         <a class="collapse-item" href="#">15-</a> 
